@@ -1,0 +1,2 @@
+Unit root and cointegration tests encountered in applied econometric
+analysis are implemented.
