@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 13:31:55 brook Exp $
+
+CATEGORIES=	math R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/urca/
+COMMENT=	Unit root and cointegration tests for time series data
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
+
+R_PKGNAME=	urca
+R_PKGVER=	1.3-0
+
+USE_LANGUAGES=	c fortran
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
