@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3113 2019/07/31 13:30:20 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3114 2019/07/31 13:31:55 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5070,3 +5070,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added math/R-rstudioapi version 0.10 [brook 2019-07-31]
 	Added math/R-sandwich version 2.5.1 [brook 2019-07-31]
 	Added math/R-survey version 3.36 [brook 2019-07-31]
+	Added math/R-urca version 1.3.0 [brook 2019-07-31]
